<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/light_blue"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/heading_bottom_margin"
        android:text="@string/heading"
        android:textSize="@dimen/head_font_size"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/spotify_streamer"
        android:layout_height="wrap_content"
        android:layout_width="@dimen/btn_width"
        android:onClick="onClicked"
        android:text="@string/spotify_streamer"
        android:layout_marginBottom="@dimen/btn_vertical_margin"
        android:background="@color/orange" />

    <Button
        android:id="@+id/football_scores"
        android:layout_width="@dimen/btn_width"
        android:layout_height="wrap_content"
        android:onClick="onClicked"
        android:text="@string/football_scores"
        android:layout_marginBottom="@dimen/btn_vertical_margin"
        android:background="@color/orange" />

    <Button
        android:id="@+id/library"
        android:layout_height="wrap_content"
        android:layout_width="@dimen/btn_width"
        android:onClick="onClicked"
        android:text="@string/library"
        android:layout_marginBottom="@dimen/btn_vertical_margin"
        android:background="@color/orange" />

    <Button
        android:id="@+id/build_it_bigger"
        android:layout_width="@dimen/btn_width"
        android:layout_height="wrap_content"
        android:onClick="onClicked"
        android:text="@string/build_it_bigger"
        android:layout_marginBottom="@dimen/btn_vertical_margin"
        android:background="@color/orange" />

    <Button
        android:id="@+id/xyz_reader"
        android:layout_width="@dimen/btn_width"
        android:layout_height="wrap_content"
        android:onClick="onClicked"
        android:text="@string/xyz_reader"
        android:layout_marginBottom="@dimen/btn_vertical_margin"
        android:background="@color/orange" />


    <Button
        android:id="@+id/capstone"
        android:layout_width="@dimen/btn_width"
        android:layout_height="wrap_content"
        android:onClick="onClicked"
        android:text="@string/capstone"
        android:background="@color/pink"
        android:textColor="@color/white"/>

</LinearLayout>
